# comet

./: .dockerignore  .env-redis  .env-redis.example  .env-sample  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PR_SUMMARY.md  README.md  addons.xml  addons.xml.md5  compose-fullstacksample.yaml  compose.yaml  docker-compose-dev.yml  docker-compose.yaml  docker-compose.yml  env-sample  index.html  main.py  makefile  pyproject.toml  run.py  updated-compose.yaml
.github/: FUNDING.yml
.github/workflows/: docker-build-common.yml  docker-build-push.yml  kodi-build.yml  main.py  release-please.yaml  release-please.yml
comet/: __main__.py  db_cli.py  logger.py  main.py  models.py
comet/api/: app.py  auth.py  core.py  stream.py
comet/background_scraper/: cinemata_client.py  worker.py
comet/cometnet/: __init__.py  crypto.py  discovery.py  gossip.py  interface.py  keystore.py  manager.py  nat.py  pools.py  protocol.py  relay.py  reputation.py  standalone.py  transport.py  utils.py  validation.py
comet/core/: config_validation.py  constants.py  database.py  db_manager.py  db_router.py  execution.py  log_levels.py  logger.py  metrics.py  models.py  schema_migrations.py  schema_specs.py  sqlite_compat.py
comet/debrid/: alldebrid.py  debrider.py  debridlink.py  easydebrid.py  exceptions.py  manager.py  offcloud.py  pikpak.py  premiumize.py  realdebrid.py  stremthru.py  torbox.py  torrent.py
comet/metadata/: episode_index.py  filter.py  imdb.py  kitsu.py  manager.py  tmdb.py  trakt.py
comet/scrapers/: aiostreams.py  animetosho.py  base.py  bitmagnet.py  comet.py  debridio.py  dmm.py  jackett.py  jackettio.py  manager.py  mediafusion.py  meteor.py  models.py  nekobt.py  nyaa.py  peerflix.py  (+9 more)
deployment/: cloudflare-cache-rules.md  docker-compose.yml  nginx.conf
docs/: COMETNET.md  COMETNET_DOCKER.md  README.md  troubleshooting.md
kodi/: Makefile  README.md  generate_repository.py  index.html.template
plugin.video.comet/: addon.xml
repository.comet/: addon.xml
scripts/: generate_status_videos.py  uptime_monitor.py
templates/: index.html
tests/: test_changelog.py
utils/: logger.py
(+109 files in other folders)
